<resources>
    <string name="app_name">PerHourJobs</string>
    <string name="continue_with_facebook">Continue with facebook</string>
    <string name="sign_up_with_an_email">Sign up with an email</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register">Register</string>
    <string name="job_seeker">Job Seeker</string>
    <string name="company">Company</string>
    <string name="username">Username</string>
    <string name="example_email_com">example@email.com</string>
    <string name="mobile">Mobile</string>
    <string name="licence_agreement">licence agreement</string>
    <string name="i_have_read_and_agreed_to_the">I have read and agreed to the</string>
    <string name="sms_verification">SMS Verification</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="enter_sms_code_you_received">Enter SMS Code you received</string>
    <string name="next">Next</string>
    <string name="or_enter_your_email_address">Or enter your email address</string>
    <string name="retrieve_password">Retrieve Password</string>
    <string name="retrieve_username">Retrieve Username</string>
    <string name="password_reset">Password Reset</string>
    <string name="enter_your_email_address_in_order_to_reset_your_password">Enter your email address in order to reset your password</string>
    <string name="reset">Reset</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share">Share</string>
</resources>
