<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/back_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/ic_keyboard_backspace_black_24dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:gravity="center"
                    android:text="@string/register"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>


        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1.5"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:text="@string/job_seeker"
                    android:textColor="@color/black" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switcher"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:thumb="@drawable/sw_thumb" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1.5"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:text="@string/company"
                    android:textColor="@color/black" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="25dp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/stroke_gray"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="1dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/example_email_com"
                    android:inputType="textEmailAddress"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                android:text="@string/username"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/stroke_gray"
                android:orientation="horizontal">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_margin="1dp"
                        android:gravity="center_vertical"
                        android:inputType="textPersonName"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:background="@null"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="25dp"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/lin_faceBook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/stroke_gray"
                android:orientation="horizontal">


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="1dp"
                    android:gravity="center_vertical"
                    android:hint="*******"
                    android:background="@null"
                    android:inputType="textPassword"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="25dp"
                android:text="@string/mobile"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/stroke_gray"
                android:orientation="horizontal">


                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_margin="1dp"
                        android:gravity="center_vertical"
                        android:inputType="textEmailAddress"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:background="@null"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_one"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="25dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/i_have_read_and_agreed_to_the"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_two"
                    android:layout_marginStart="25dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_below="@id/txt_one"
                    android:text="@string/licence_agreement"/>

                <View
                    android:layout_width="120dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="25dp"
                    android:background="@color/gray"
                    android:layout_marginTop="1dp"
                    android:layout_below="@id/txt_two">

                </View>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="22dp"
                    android:layout_marginEnd="25dp"/>


            </RelativeLayout>
            <LinearLayout
                android:id="@+id/lin_signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/stroke_blue_solid"
                android:gravity="center"
                android:orientation="horizontal">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_gravity="center"
                        android:layout_margin="1dp"
                        android:gravity="center"
                        android:id="@+id/next"
                        android:background="@drawable/stroke_blue_solid"
                        android:text="@string/next"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
        </ScrollView>

    </LinearLayout>

</LinearLayout>