<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_centerVertical="true"
                    android:id="@+id/back_img"
                    android:background="@drawable/ic_keyboard_backspace_black_24dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:text="@string/sign_in"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="20sp"/>
            </RelativeLayout>


        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/stroke_gray">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_margin="1dp"
                        android:textColor="@color/black"
                        android:gravity="center_vertical"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:inputType="textEmailAddress"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:background="@null"
                        android:hint="@string/example_email_com" />

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginTop="20dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="8dp"
                android:id="@+id/lin_faceBook"
                android:background="@drawable/stroke_gray">


                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_margin="1dp"
                        android:textColor="@color/black"
                        android:gravity="center_vertical"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:inputType="textPassword"
                        android:textSize="20sp"
                        android:background="@null"
                        android:textStyle="bold"
                        android:hint="*******" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:id="@+id/lin_signUp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/stroke_blue_solid">


                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_margin="1dp"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:id="@+id/btn_sign_in"
                        android:background="@drawable/stroke_blue_solid"
                        android:textStyle="bold"
                        android:text="@string/sign_in" />

            </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/forgot_password"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_marginTop="20dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="25dp"/>
                </RelativeLayout>
            </LinearLayout>

        </ScrollView>


    </LinearLayout>

</LinearLayout>