<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="2">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.8"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.2"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:id="@+id/lin_faceBook"
                    android:background="@drawable/stroke_blue">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_margin="1dp"
                            android:background="@drawable/facebook_new"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:layout_margin="1dp"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:text="@string/continue_with_facebook" />
                    </LinearLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:id="@+id/lin_signUp"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:background="@drawable/stroke_blue_solid">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_margin="1dp"
                            android:background="@drawable/ic_mail_outline_black_24dp"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:layout_margin="1dp"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:text="@string/sign_up_with_an_email" />
                    </LinearLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_margin="20dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:layout_margin="1dp"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:text="@string/already_have_an_account" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:layout_margin="1dp"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:id="@+id/sign_in_txt"
                            android:textStyle="bold"
                            android:text="@string/sign_in" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>