<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.ResetPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/back_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/ic_keyboard_backspace_black_24dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="20dp"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </RelativeLayout>


            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="16dp"
            android:orientation="vertical">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password_reset"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_your_email_address_in_order_to_reset_your_password"
                    android:textColor="@color/black"
                    android:layout_marginTop="24dp"
                    android:textSize="16sp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:paddingStart="24dp"
                    android:hint="Example@email.com"
                    android:layout_marginTop="8dp"
                    android:paddingBottom="16dp"
                    android:background="@drawable/stroke_gray"
                    android:paddingTop="16dp"
                    android:textSize="14sp"
                    android:paddingEnd="24dp"
                    android:textColor="@color/black"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/stroke_blue_solid"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:text="@string/reset"
                    android:layout_marginBottom="16dp"/>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>